<resources>
    <string name="app_name">Perlu Dilindungi</string>
    <string name="title_news">News</string>
    <string name="title_lokasi">Lokasi Vaksin</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="cari_faskes">Cari Faskes</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="search">Search</string>
    <string name="checkin">Check In</string>
    <string name="title_activity_check_in">CheckIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="googleMap">Google Maps</string>
    <string name="bookmark_faskes">Bookmark Faskes</string>
    <string name="delete">Delete Bookmark</string>
</resources>