<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.perludilindungi.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_lokasi"
        android:name="com.example.perludilindungi.ui.lokasi.LokasiFragment"
        android:label="@string/title_lokasi"
        tools:layout="@layout/fragment_lokasi" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.perludilindungi.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
</navigation>