<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <TextView
        android:id="@+id/namaFaskes"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nama Faskes" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaFaskes"
        tools:text="alamat" />

    <TextView
        android:id="@+id/noTelp"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamat"
        tools:text="Nomor Telp" />

    <TextView
        android:id="@+id/kodeFaskes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaFaskes"
        tools:text="Kode" />

    <TextView
        android:id="@+id/jenisFaskes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/alamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaFaskes"
        app:layout_constraintVertical_bias="0.52"
        tools:text="Jenis Faskes" />

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/title_news"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/statusFaskes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        tools:text="Status Faskes" />

    <Button
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#8533ff"
        android:text="@string/googleMap"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/bookmarkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusFaskes"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/bookmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="#ff80ff"
        android:text="@string/title_bookmark"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusFaskes" />

</androidx.constraintlayout.widget.ConstraintLayout>